@@ -14,6 +14,10 @@
 
 #include "bulletCharacterControllerNode.h"
 
+#if BT_BULLET_VERSION >= 285
+static const btVector3 up_vectors[3] = {btVector3(1.0f, 0.0f, 0.0f), btVector3(0.0f, 1.0f, 0.0f), btVector3(0.0f, 0.0f, 1.0f)};
+#endif
+
 TypeHandle BulletCharacterControllerNode::_type_handle;
 
 ////////////////////////////////////////////////////////////////////
@@ -57,8 +61,13 @@ BulletCharacterControllerNode(BulletShape *shape, PN_stdfloat step_height, const
   _angular_movement = 0.0f;
 
   // Character controller
+#if BT_BULLET_VERSION >= 285
+  _character = new btKinematicCharacterController(_ghost, convex, step_height, up_vectors[_up]);
+  _character->setGravity(up_vectors[_up] * -(btScalar)9.81f);
+#else
   _character = new btKinematicCharacterController(_ghost, convex, step_height, _up);
   _character->setGravity((btScalar)9.81f);
+#endif
 
   // Retain a pointer to the shape
   _shape = shape;
@@ -301,8 +310,11 @@ get_max_slope() const {
 ////////////////////////////////////////////////////////////////////
 PN_stdfloat BulletCharacterControllerNode::
 get_gravity() const {
-
+#if BT_BULLET_VERSION >= 285
+  return -(PN_stdfloat)_character->getGravity()[_up];
+#else
   return (PN_stdfloat)_character->getGravity();
+#endif
 }
 
 ////////////////////////////////////////////////////////////////////
@@ -311,8 +323,11 @@ get_gravity() const {
 ////////////////////////////////////////////////////////////////////
 void BulletCharacterControllerNode::
 set_gravity(PN_stdfloat gravity) {
-
+#if BT_BULLET_VERSION >= 285
+  _character->setGravity(up_vectors[_up] * -(btScalar)gravity);
+#else
   _character->setGravity((btScalar)gravity);
+#endif
 }
 
 
