@@ -43,6 +43,7 @@ This issue fixes several bugs that were still found in 1.9.2.
 * Fix exception when creating intervals before ShowBase is started
 * Fix rare X11 .ico cursor bug; also now supports PNG-compressed icons
 * Add keyword argument support to make() methods such as Shader.make()
+* Fix compilation errors with Bullet 2.84
 
 ------------------------  RELEASE 1.9.2  ------------------------
 
